--- a/test/testbundle/bundle.yaml
+++ b/test/testbundle/bundle.yaml
@@ -2,6 +2,8 @@ build:
     geoheaderFile: meta/geoschema.csv
     dependencies:
       usgeo: census.gov-geography-dim-orig-a7d9
+      geoaddresses: clarinova.com-geocode-sandiego-orig-429e-segments
+      crime: sandag.org-crimeincidents-orig-429e-incidents
 identity:
     creator: creator
     dataset: dataset
