Improvements, refactoring, to Identities.

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ org.eclipse.core.resources.prefs
 test/html
 *.
 *.
+test/testbundle/build-save/source/dataset-subset-variation-ca0d-r1/hdf5.hdf5
+test/testbundle/build-save/test-marker
