--- a/test/testbundle/server-test-config.yaml
+++ b/test/testbundle/server-test-config.yaml
@@ -1,16 +1,20 @@
 library:
     default:
         port: 7979
-        remote: http://localhost:7979
         filesystem: server
         database: server      
 
+    default-remote:
+        port: 7979
+        remote: remote
+        filesystem: server-remote
+        database: server      
+        
 database:
     server:
         dbname: '/tmp/server/library.db'
         driver: sqlite  
 
-        
 filesystem:  
     server:
         dir: '/tmp/server/cache-l1'
@@ -19,6 +23,47 @@ filesystem:
           dir: '/tmp/server//cache-l2'
           options: [compress]
 
+    server-remote:
+        dir: '/tmp/server/cache-l1'
+        size: 5000
+        upstream:
+          options: [compress,usreadonly]
+          bucket: devtest.clarinova.net
+          prefix: test
+          access_key: AKIAIOKK4KSYYGYXWQJQ
+          secret: 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
+
+    remote:
+      options: [compress]
+      bucket: devtest.clarinova.net
+      prefix: test
+      access_key: AKIAIOKK4KSYYGYXWQJQ
+      secret: 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
+          
+    direct-remote:
+      dir: '/tmp/server/cache-l1'
+      upstream:
+        dir: '/tmp/server/cache-l2'
+        options: [compress]
+        upstream:
+          options: [compress]
+          bucket: devtest.clarinova.net
+          prefix: test
+          access_key: AKIAIOKK4KSYYGYXWQJQ
+          secret: 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  
+         
+    direct-remote-2:
+      dir: '/tmp/server/cache-l1-2'
+      size: 5000
+      upstream:
+        dir: '/tmp/server/cache-l2-2'
+        options: [compress]
+        upstream:
+          bucket: devtest.clarinova.net
+          prefix: test
+          access_key: AKIAIOKK4KSYYGYXWQJQ
+          secret: 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  
+          
             
 downloads:
     dir: '{root}/downloads'
