Simplif library configuration

--- a/test/testbundle/client-test-config.yaml
+++ b/test/testbundle/client-test-config.yaml
@@ -45,11 +45,6 @@ filesystem:
           dir: '/tmp/server//cache-l2'
           options: [compress]
           
-    remote:
-      bucket: devtest.clarinova.net
-      prefix: test
-      access_key: AKIAIOKK4KSYYGYXWQJQ
-      secret: 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
 
     cache1:
       dir: '/tmp/cache-test/cache1'
@@ -71,8 +66,10 @@ filesystem:
           access_key: AKIAIOKK4KSYYGYXWQJQ
           secret: 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               
       
-      
-
+accounts:
+    s3:
+        AKIAIOKK4KSYYGYXWQJQ: 9btJZdRoBsOV8p4Gtaduy6zCLtcoSr3Z5sgRpbd9 # devtest.clarinova.net
+        
 downloads:
     dir: '{root}/downloads'
 
