Major refactoring of partitions, databases and identities

--- a/test/testbundle/client-test-config.yaml
+++ b/test/testbundle/client-test-config.yaml
@@ -85,7 +85,11 @@ filesystem:
           bucket: devtest.clarinova.net
           prefix: cache-test/cache3
 
-              
+             
+    google:
+      bucket: sdrdl-test  
+      account: clarinova.com-sdrdl-demo
+      prefix: prefix
       
     
 downloads:
