Created CSV database type.

--- a/test/testbundle/bundle.yaml
+++ b/test/testbundle/bundle.yaml
@@ -53,6 +53,7 @@ partitions:
 - source-dataset-subset-variation-ca0d.ttwo
 - source-dataset-subset-variation-ca0d.tthree
 - source-dataset-subset-variation-ca0d.all
-- source-dataset-subset-variation-ca0d.geot1
-- source-dataset-subset-variation-ca0d.geot2
-- source-dataset-subset-variation-ca0d.hdf5
+- source-dataset-subset-variation-ca0d.csv.1
+- source-dataset-subset-variation-ca0d.csv.2
+- source-dataset-subset-variation-ca0d.csv.3
+- source-dataset-subset-variation-ca0d.csv.4
