Hacking on Warehouses

--- a/test/testbundle/warehouse-test-config.yaml
+++ b/test/testbundle/warehouse-test-config.yaml
@@ -40,7 +40,7 @@ database:
         password: samizdat 
 
     sqlite_warehouse:
-        dbname: '/tmp/server/warehouse.db'
+        dbname: '/tmp/warehouse.db'
         driver: sqlite  
 
 
