--- a/test/testbundle/bundle.yaml
+++ b/test/testbundle/bundle.yaml
@@ -49,11 +49,16 @@ identity:
     vid: a1DxuZ/001
     vname: source-dataset-subset-variation-ca0d-r1
 partitions:
-- source-dataset-subset-variation-ca0d.tone
-- source-dataset-subset-variation-ca0d.ttwo
-- source-dataset-subset-variation-ca0d.tthree
-- source-dataset-subset-variation-ca0d.all
 - source-dataset-subset-variation-ca0d.csv.1
 - source-dataset-subset-variation-ca0d.csv.2
 - source-dataset-subset-variation-ca0d.csv.3
 - source-dataset-subset-variation-ca0d.csv.4
+- source-dataset-subset-variation-ca0d.tone
+- source-dataset-subset-variation-ca0d.ttwo
+- source-dataset-subset-variation-ca0d.tthree.1
+- source-dataset-subset-variation-ca0d.tthree.2
+- source-dataset-subset-variation-ca0d.tthree.3
+- source-dataset-subset-variation-ca0d.tthree.4
+- source-dataset-subset-variation-ca0d.geot1
+- source-dataset-subset-variation-ca0d.geot2
+- source-dataset-subset-variation-ca0d.hdf5
