--- a/test/testbundle/bundle.yaml
+++ b/test/testbundle/bundle.yaml
@@ -49,11 +49,21 @@ identity:
     vid: a1DxuZ/001
     vname: source-dataset-subset-variation-ca0d-r1
 partitions:
+- source-dataset-subset-variation-ca0d.tone
+- source-dataset-subset-variation-ca0d.tone.1
+- source-dataset-subset-variation-ca0d.tone.2
+- source-dataset-subset-variation-ca0d.tone.3
+- source-dataset-subset-variation-ca0d.tone.4
+- source-dataset-subset-variation-ca0d.tone.5
+- source-dataset-subset-variation-ca0d.tone.6
+- source-dataset-subset-variation-ca0d.tone.7
+- source-dataset-subset-variation-ca0d.tone.8
+- source-dataset-subset-variation-ca0d.tone.9
+- source-dataset-subset-variation-ca0d.tone.10
 - source-dataset-subset-variation-ca0d.csv.1
 - source-dataset-subset-variation-ca0d.csv.2
 - source-dataset-subset-variation-ca0d.csv.3
 - source-dataset-subset-variation-ca0d.csv.4
-- source-dataset-subset-variation-ca0d.tone
 - source-dataset-subset-variation-ca0d.ttwo
 - source-dataset-subset-variation-ca0d.tthree.1
 - source-dataset-subset-variation-ca0d.tthree.2
