--- a/test/testbundle/bundle.yaml
+++ b/test/testbundle/bundle.yaml
@@ -12,10 +12,6 @@ about:
 build:
     dependencies:
         communities: sangis.org-neighborhoods-orig-429e.communities.sd
-        crime: sandag.org-crimeincidents-orig-429e.incidents
-        extents: clarinova.com-extents-2012-7ba4
-        geocoder: clarinova.com-geocode-casnd-429e.segments
-        usgeo: census.gov-geography-dim-orig-a7d9
     geoheaderFile: meta/schema.csv
 extracts:
 -   description: 'This is a multi-line description for the extract of {p_name}, with
@@ -48,28 +44,4 @@ identity:
     variation: variation
     vid: a1DxuZ/001
     vname: source-dataset-subset-variation-ca0d-r1
-partitions:
-- source-dataset-subset-variation-ca0d.geot1
-- source-dataset-subset-variation-ca0d.geot2
-- source-dataset-subset-variation-ca0d.tone.missing
-- source-dataset-subset-variation-ca0d.tone
-- source-dataset-subset-variation-ca0d.tone.1
-- source-dataset-subset-variation-ca0d.tone.2
-- source-dataset-subset-variation-ca0d.tone.3
-- source-dataset-subset-variation-ca0d.tone.4
-- source-dataset-subset-variation-ca0d.tone.5
-- source-dataset-subset-variation-ca0d.tone.6
-- source-dataset-subset-variation-ca0d.tone.7
-- source-dataset-subset-variation-ca0d.tone.8
-- source-dataset-subset-variation-ca0d.tone.9
-- source-dataset-subset-variation-ca0d.tone.10
-- source-dataset-subset-variation-ca0d.csv.1
-- source-dataset-subset-variation-ca0d.csv.2
-- source-dataset-subset-variation-ca0d.csv.3
-- source-dataset-subset-variation-ca0d.csv.4
-- source-dataset-subset-variation-ca0d.ttwo
-- source-dataset-subset-variation-ca0d.tthree.1
-- source-dataset-subset-variation-ca0d.tthree.2
-- source-dataset-subset-variation-ca0d.tthree.3
-- source-dataset-subset-variation-ca0d.tthree.4
-- source-dataset-subset-variation-ca0d.hdf5
+partitions: []
