--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,11 @@
 PyYAML
 SQLAlchemy
-# This pysqlite clone enables load_extension
-# -e git+https://github.com/clarinova/pysqlite.git#egg=pysqlite
-petl
-decorator
 simplejson
-nose
-beautifulsoup4
-ckanclient
-requests==1.2.0
+requests==1.2.0 # Later versions don't work right, but forgot why ...
 boto
 python-dateutil
-fuzzy
-paste
-bottle
-numpy
-gdal
-h5py
 unicodecsv
 lockfile
 sh
+# This pysqlite clone enables load_extension. Only needed on Linux
+# -e git+https://github.com/clarinova/pysqlite.git#egg=pysqlite
