Minor hotfix bugs

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,7 @@ unicodecsv
 lockfile
 sh
 petl
+BeautifulSoup4
+pyparsing
 # This pysqlite clone enables load_extension. Only needed on Linux
 # -e git+https://github.com/clarinova/pysqlite.git#egg=pysqlite
