--- a/test/testbundle/client-test-config.yaml
+++ b/test/testbundle/client-test-config.yaml
@@ -45,15 +45,15 @@ filesystem:
       dir: '{root}/devtest'
       upstream:
         options: [compress]
-        bucket: devtest.clarinova.net
+        bucket: devtest.sandiegodata.org
         prefix: test
-        account: devtest.clarinova.net
+        account: devtest.sandiegodata.org
     
     devtest-nocache:
       options: [compress]
-      bucket: devtest.clarinova.net
+      bucket: devtest.sandiegodata.org
       prefix: test-remote
-      account: devtest.clarinova.net
+      account: devtest.sandiegodata.org
     
     client:
         dir: '{root}/cache-l1'
@@ -82,7 +82,7 @@ filesystem:
         dir: '/tmp/cache-test/cache2' 
         options: [compress]         
         upstream:
-          bucket: devtest.clarinova.net
+          bucket: devtest.sandiegodata.org
           prefix: cache-test/cache3
 
              
