--- a/test/testbundle/bundle.yaml
+++ b/test/testbundle/bundle.yaml
@@ -45,7 +45,4 @@ identity:
     variation: variation
     vid: a1DxuZ/001
     vname: source-dataset-subset-variation-ca0d-r1
-partitions:
-- source-dataset-subset-variation-ca0d.coding
-- source-dataset-subset-variation-ca0d.coding_date_codes
-- source-dataset-subset-variation-ca0d.coding_integer_codes
+partitions: []
