Getting Identity working with the bundle again.

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,5 +12,6 @@ petl
 pyparsing
 markdown
 psycopg2
+semantic_version
 # This pysqlite clone enables load_extension. Only needed on Linux
 # git+https://github.com/clarinova/pysqlite.git#egg=pysqlite
