--- a/test/testbundle/bundle.yaml
+++ b/test/testbundle/bundle.yaml
@@ -46,4 +46,7 @@ identity:
     version: 0.0.1
     vid: d1DxuZ001
     vname: source-dataset-subset-variation-0.0.1
-partitions: []
+partitions:
+- source-dataset-subset-variation-coding
+- source-dataset-subset-variation-coding_date_codes
+- source-dataset-subset-variation-coding_integer_codes
